# docgen-rs

./: .gitattributes  .gitignore  .release-plz.toml  Cargo.toml  README.md  TODO.md  VENDOR.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release-plz.yml  release.yml
.overnight/docgen-rs-p1-p6/: PLAN.md  REPORT.md  WORKLOG.md
crates/docgen/: CHANGELOG.md  Cargo.toml
crates/docgen-assets/: CHANGELOG.md  Cargo.toml
crates/docgen-assets/assets/docgen/: bootstrap.js  code.css  diff.css  docgen.css  search.js
crates/docgen-assets/assets/docgen/dev/: editor-cm6.js  editor.css  editor.js  livereload.js
crates/docgen-assets/assets/docgen/islands/: bases.js  diff.js  graph.js  layout.js  mermaid.js  scrollspy.js  theme-toggle.js  wikilink.js
crates/docgen-assets/assets/editor-src/: README.md  editor-cm6.entry.js
crates/docgen-assets/components/callout/: style.css  template.html
crates/docgen-assets/js-tests/: bases.test.mjs  sort-parity.test.mjs
crates/docgen-assets/js-tests/fixtures/: sort-0.json  sort-1.json  sort-10.json  sort-11.json  sort-12.json  sort-13.json  sort-2.json  sort-3.json  sort-4.json  sort-5.json  sort-6.json  sort-7.json  sort-8.json  sort-9.json
crates/docgen-assets/src/: lib.rs
crates/docgen-assets/tests/: js_parity.rs
crates/docgen-bases/: CHANGELOG.md  Cargo.toml
crates/docgen-bases/src/: ast.rs  eval.rs  filter.rs  format.rs  functions.rs  interactive.rs  lexer.rs  lib.rs  model.rs  note.rs  parser.rs  render.rs  semver.rs  summary.rs  value.rs
crates/docgen-bases/tests/: sort_parity.rs
crates/docgen-build/: CHANGELOG.md  Cargo.toml
crates/docgen-build/src/: incremental.rs  lib.rs
crates/docgen-build/tests/: build_site.rs  components.rs
crates/docgen-components/: CHANGELOG.md  Cargo.toml
crates/docgen-components/src/: lib.rs
crates/docgen-config/: CHANGELOG.md  Cargo.toml
crates/docgen-config/src/: lib.rs
crates/docgen-core/: CHANGELOG.md  Cargo.toml
crates/docgen-core/src/: assemble.rs  assetpass.rs  asseturl.rs  basepass.rs  bases.rs  directivepass.rs  discover.rs  extract.rs  frontmatter.rs  graph.rs  graphlayout.rs  headings.rs  lib.rs  markdown.rs  math.rs  mathpass.rs  mermaidpass.rs  model.rs  pipeline.rs  plantuml.rs  search.rs  tablepass.rs  tree.rs  util.rs  wikilink.rs
crates/docgen-core/tests/: pipeline.rs
crates/docgen-diff/: CHANGELOG.md  Cargo.toml
crates/docgen-diff/src/: block_diff.rs  error.rs  file_tree.rs  git_parsing.rs  git_refs.rs  history.rs  lib.rs  line_diff.rs  payloads.rs  report.rs  testutil.rs  timeline_groups.rs  types.rs
crates/docgen-init/: CHANGELOG.md  Cargo.toml
crates/docgen-init/src/: lib.rs
crates/docgen-init/template/: docgen.toml
crates/docgen-init/template/docs/: guide.md  index.md
crates/docgen-lint/: CHANGELOG.md  Cargo.toml
crates/docgen-lint/src/: context.rs  engine.rs  format.rs  lib.rs  model.rs
crates/docgen-lint/src/rules/: assets.rs  diagrams.rs  external.rs  links.rs  meta.rs  mod.rs  structure.rs  util.rs
crates/docgen-plantuml/: CHANGELOG.md  Cargo.toml
crates/docgen-plantuml/src/: container.rs  encode.rs  lib.rs  render.rs
crates/docgen-render/: CHANGELOG.md  Cargo.toml
crates/docgen-render/assets/: docgen.css  search.js
crates/docgen-render/src/: lib.rs
crates/docgen-render/templates/: diff.html  graph.html  history.html  page.html  preview.html
crates/docgen-s3/: CHANGELOG.md  Cargo.toml
crates/docgen-s3/src/: lib.rs  manifest.rs  tls.rs  upload.rs
crates/docgen-server/: CHANGELOG.md  Cargo.toml
crates/docgen-server/src/: handlers.rs  lib.rs  watch.rs
crates/docgen-server/tests/: dev_only_gating.rs  editor.rs  path_guard.rs  server.rs
crates/docgen/src/: build.rs  history.rs  lib.rs  main.rs
crates/docgen/tests/: build_cli.rs  crypto_provider.rs  dist_meta.rs  history_cli.rs  init_build.rs  lint_cli.rs  s3_upload_e2e.rs
docs/superpowers/plans/: 2026-06-05-docgen-rs-p0-core-ssg.md  2026-06-05-docgen-rs-p1-search-highlight-links.md  2026-06-05-docgen-rs-p2-diff-timeline.md  2026-06-05-docgen-rs-p3-assets-katex-mermaid.md  2026-06-05-docgen-rs-p4-graph.md  2026-06-05-docgen-rs-p5-devserver-editor.md  2026-06-05-docgen-rs-p6-init-directives-dist.md  2026-06-05-docgen-rs-p7-theme.md  2026-06-08-psychoville-docgen-rs-migration.md
docs/superpowers/specs/: 2026-06-05-docgen-rust-rewrite-design.md  2026-06-08-psychoville-docgen-rs-migration-design.md
fixtures/site-basic/: docgen.toml
fixtures/site-basic/docs/: _facts.inc.md  diagram.md  directives.md  index.md  markup.md  math.md
fixtures/site-basic/docs/guide/: intro.md
fixtures/site-lint/: README.md  docgen.toml
fixtures/site-lint/docs/: _unused.md  _used.md  assets.md  books.base  books.md  broken-links.md  diagrams.md  headings.md  index.md  meta.md  orphan.md  untitled.md
fixtures/site-lint/docs/drafts/: broken.md
specs/: 2026-07-15-plantuml-build-support-design.md  2026-07-16-obsidian-bases-support-design.md  2026-07-17-docgen-lint-design.md
website/: docgen.toml
website/components/note/: style.css  template.html
website/docs/: configuration.md  deployment.md  getting-started.md  index.md  releases.base
website/docs/features/: bases.md  components.md  history.md  includes.md  index.md  lint.md  math-and-mermaid.md  plantuml.md  s3-offload.md  search-and-graph.md  wikilinks.md
website/docs/releases/: analytics-1-13-10.md  analytics-1-5-11.md  auth-1-0-23.md  auth-1-19-20.md  auth-1-2-12.md  billing-1-11-19.md  billing-1-7-4.md  billing-1-7-5.md  data-pipeline-1-12-8.md  data-pipeline-1-8-25.md  gateway-1-14-17.md  gateway-1-17-2.md  gateway-1-8-29.md  mobile-api-1-13-7.md  mobile-api-1-2-27.md  notifications-1-11-18.md  notifications-1-7-16.md  payments-1-6-30.md  payments-1-8-22.md  search-1-1-0.md  search-1-2-17.md  search-1-7-21.md  v0-1-0.md  v0-1-1.md  v0-2-0.md  v0-3-0.md  v0-3-1.md  v0-4-0.md  v0-4-1.md  v0-5-0.md  v0-6-0.md  v0-7-0.md  v0-8-0.md  v0-8-1.md  v0-9-0.md  web-app-1-1-21.md  web-app-1-17-6.md
