[workspace]
resolver = "2"
members = ["crates/docgen-config", "crates/docgen-components", "crates/docgen-core", "crates/docgen-diff", "crates/docgen-assets", "crates/docgen-render", "crates/docgen-build", "crates/docgen-server", "crates/docgen-init", "crates/docgen"]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.0.0"
