[workspace]
resolver = "2"
members = ["crates/docgen-config", "crates/docgen-components", "crates/docgen-core", "crates/docgen-diff", "crates/docgen-assets", "crates/docgen-render", "crates/docgen-build", "crates/docgen-server", "crates/docgen-init", "crates/docgen", "crates/docgen-s3", "crates/docgen-plantuml"]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.5.0"
repository = "https://github.com/IamMaxim/docgen-rs"
readme = "README.md"
authors = ["Maxim Stepanov"]
rust-version = "1.74"

[workspace.dependencies]
docgen-config = { version = "0.5.0", path = "crates/docgen-config" }
docgen-components = { version = "0.5.0", path = "crates/docgen-components" }
docgen-core = { version = "0.5.0", path = "crates/docgen-core" }
docgen-diff = { version = "0.5.0", path = "crates/docgen-diff" }
docgen-assets = { version = "0.5.0", path = "crates/docgen-assets" }
docgen-render = { version = "0.5.0", path = "crates/docgen-render" }
docgen-build = { version = "0.5.0", path = "crates/docgen-build" }
docgen-server = { version = "0.5.0", path = "crates/docgen-server" }
docgen-init = { version = "0.5.0", path = "crates/docgen-init" }
docgen-s3 = { version = "0.5.0", path = "crates/docgen-s3" }
docgen-plantuml = { version = "0.5.0", path = "crates/docgen-plantuml" }
