[package]
name = "docgen-build"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
docgen-core = { path = "../docgen-core" }
docgen-diff = { path = "../docgen-diff" }
docgen-assets = { path = "../docgen-assets" }
docgen-render = { path = "../docgen-render" }

[dev-dependencies]
tempfile = "3"
