[package]
name = "docgen-build"
description = "Site build pipeline for docgen, the Cargo-only static documentation-site generator"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
docgen-config = { workspace = true }
docgen-components = { workspace = true }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
docgen-core = { workspace = true }
docgen-diff = { workspace = true }
docgen-assets = { workspace = true }
docgen-render = { workspace = true }
docgen-plantuml = { workspace = true }
docgen-s3 = { workspace = true, optional = true }
serde_json = "1"

[features]
default = []
s3 = ["dep:docgen-s3"]

[dev-dependencies]
tempfile = "3"
