[package]
name = "docgen-components"
description = "Reusable template components for docgen, the Cargo-only static documentation-site generator"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
minijinja = "2.20.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"
