[package]
name = "docgen-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
comrak = { version = "0.52.0", features = ["syntect"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yml = "0.0.13"
thiserror = "2.0.18"
walkdir = "2.5.0"
