[package]
name = "docgen-core"
description = "Core Markdown processing and page model for docgen, the Cargo-only static documentation-site generator"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
docgen-config = { workspace = true }
docgen-components = { workspace = true }
docgen-bases = { workspace = true }
comrak = { version = "0.52.0", features = ["syntect"] }
katex = "0.4.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yml = "0.0.13"
thiserror = "2.0.18"
walkdir = "2.5.0"
