[package]
name = "docgen-diff"
description = "Git-based change tracking for docgen, the Cargo-only static documentation-site generator"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
docgen-core = { workspace = true }
git2 = "0.20.2"
similar = "2.7.0"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
regex = "1.12.3"
