[package]
name = "docgen-diff"
description = "Git-based change tracking for docgen, the Cargo-only static documentation-site generator"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
docgen-core = { workspace = true }
# Local-only repo access (history/diff); no network, so drop the default
# https/ssh features that pull in openssl-sys (breaks cross-builds and
# `cargo install` on hosts without OpenSSL).
git2 = { version = "0.20.2", default-features = false }
similar = "2.7.0"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
regex = "1.12.3"
