[package]
name = "docgen-init"
description = "Project scaffolding for docgen, the Cargo-only static documentation-site generator"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"
docgen-config = { workspace = true }
