[package]
name = "docgen-s3"
description = "Optional S3-compatible asset offload for docgen, the Cargo-only static documentation-site generator"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
docgen-config = { workspace = true }
docgen-core = { workspace = true }
# `sync` only: rust-s3's TLS presets all pick the wrong attohttpc feature for us
# (`sync-rustls-tls` -> `attohttpc/tls-rustls` -> webpki roots). We name the TLS
# stack ourselves on the `attohttpc` dep below.
rust-s3 = { version = "0.37", default-features = false, features = ["sync"] }
# Not used directly — this pins the TLS backend of the `attohttpc` that rust-s3
# uses. BOTH features are required, and the reason is a trap in attohttpc 0.30/0.31:
#
#   __rustls      = ["dep:rustls", "rustls/default"]   <- the ONLY cfg the TLS impl
#   __rustls-ring = ["rustls/ring", "rustls/std", ...]    is compiled behind
#
# `tls-rustls-*-ring` enables `__rustls-ring` but NOT `__rustls`. Selected alone it
# still drags rustls into the tree (so the graph *looks* ring-only and healthy) while
# attohttpc silently compiles `no_tls_impl.rs` — every https:// request then fails
# with "TLS is disabled, activate one of the tls- features". That is exactly how a
# release shipped with S3 uploads 100% broken and a green build.
#
# So `tls-rustls-native-roots` is what actually turns TLS on, and it forces
# `rustls/default` = aws-lc-rs; there is no ring-only path through attohttpc's rustls.
# `-ring` then adds ring alongside it. rustls refuses to guess between two providers,
# so `crate::tls` installs ring as the process default before any request; aws-lc-rs
# is compiled but never used. Do not drop either feature:
#   - without `-native-roots`: TLS silently disabled (the bug above)
#   - without `-ring`:         aws-lc-rs is the only provider, and `tls.rs` won't compile
#
# `native-roots` (not `webpki-roots`) also makes the trust store the host's, via
# `rustls-native-certs`, which honours SSL_CERT_FILE/SSL_CERT_DIR — bundled Mozilla
# roots cannot be extended at runtime. That is what lets the minio end-to-end test
# trust its own CA, and lets users behind a TLS-inspecting proxy trust theirs.
attohttpc = { version = "0.30", default-features = false, features = [
	"tls-rustls-native-roots",
	"tls-rustls-native-roots-ring",
] }
# Direct dep so `crate::tls` can install ring as the process-default provider.
# `ring` named explicitly: this must not inherit rustls' aws-lc-rs default.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
sha2 = "0.10"
anyhow = "1"
