[package]
name = "docgen-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "net", "signal", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
notify = "6"
notify-debouncer-mini = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tempfile = "3"
docgen-assets = { path = "../docgen-assets" }
docgen-build = { path = "../docgen-build" }

[dev-dependencies]
http-body-util = "0.1"
