[package]
name = "docgen-server"
description = "Live-reload preview server for docgen, the Cargo-only static documentation-site generator"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "net", "signal", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
notify = "6"
notify-debouncer-mini = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tempfile = "3"
docgen-assets = { workspace = true }
docgen-build = { workspace = true }
docgen-core = { workspace = true }
docgen-diff = { workspace = true }
docgen-config = { workspace = true }
docgen-components = { workspace = true }
docgen-render = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
