[package]
name = "docgen"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Cargo-only static documentation-site generator"
repository = "https://github.com/iammaxim/docgen-rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/docgen-{ target }{ archive-suffix }"
bin-dir = "docgen-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
docgen-core = { path = "../docgen-core" }
docgen-diff = { path = "../docgen-diff" }
docgen-assets = { path = "../docgen-assets" }
docgen-render = { path = "../docgen-render" }
docgen-build = { path = "../docgen-build" }
docgen-server = { path = "../docgen-server" }
docgen-init = { path = "../docgen-init" }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }

[dev-dependencies]
serde_json = "1.0.150"
git2 = "0.20.2"
