[package]
name = "docgen-rs"
description = "A Cargo-only static documentation-site generator. No npm, no Node."
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["documentation", "static-site", "generator", "markdown", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "docgen"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/docgen-{ target }{ archive-suffix }"
bin-dir = "docgen-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
docgen-core = { workspace = true }
docgen-diff = { workspace = true }
docgen-assets = { workspace = true }
docgen-render = { workspace = true }
docgen-build = { workspace = true }
docgen-server = { workspace = true }
docgen-init = { workspace = true }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }

[dev-dependencies]
serde_json = "1.0.150"
git2 = "0.20.2"
